--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -5,7 +5,7 @@
         </div>
         <div>
             <nav>
-                <fa-icon routerLink="/search" [icon]="search" />
+                <fa-icon routerLink="/search/0" [icon]="search" />
                 <fa-icon routerLink="/register" [icon]="heart" />
                 <fa-icon routerLink="/cart" [icon]="cart" />
                 <fa-icon routerLink="/login" [icon]="user" />
@@ -14,7 +14,7 @@
     </div>
     <div id="container-mobile">
             <nav>
-                <fa-icon routerLink="/search" [icon]="search" />
+                <fa-icon routerLink="/search/0" [icon]="search" />
                 <fa-icon routerLink="/register" [icon]="heart" />
                 <img src="assets/platzi-icon.svg" routerLink="/" alt="Logo de Platzi">
                 <fa-icon routerLink="/cart" [icon]="cart" />
