modificación de modelos y guardado de carrito en el local storage

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -14,10 +14,11 @@
             @for (product of products; track product.id) {
                 <app-product-card 
                     class="card"
+                    [id_product]="product.id"
                     [imageUrl]="product.images[0]"
                     [title]="product.title"
                     [description]="product.description"
-                    [price]="'$' + product.price">
+                    [price]="product.price">
                 </app-product-card>
             }@empty {
                <p>No products found</p> 
