--- a/src/app/shared/components/product-card/product-card.html
+++ b/src/app/shared/components/product-card/product-card.html
@@ -1,10 +1,10 @@
+<img [src]='imageUrl' alt="product image">
 <div id="product-card" >
-    <img [src]='imageUrl' alt="product image">
     <div id="info">
         <h1>{{title}}</h1>
         <p>{{description}}</p>
-        <h2>{{price}}</h2>
-        <button class="button">View More</button>
+        <h2>${{price}}</h2>
+        <button class="button" (click)="goToProduct()">View more</button>
     </div>
 </div>
 
