--- a/src/app/shared/components/product-card/product-card.css
+++ b/src/app/shared/components/product-card/product-card.css
@@ -3,14 +3,9 @@
     height: auto;
     overflow: hidden;
     background: linear-gradient(135deg, var(--back1), var(--back2));
-    border-radius: 20px;
+    border-radius: 0 0 20px 20px;
     transition: all 0.3s ease;
     box-shadow: 0 5px 15px var(--shadow);
-    cursor: pointer;
-}
-
-#product-card:hover {
-    transform: translateY(-5px);
 }
 
 img{
@@ -19,10 +14,6 @@ img{
     object-fit: cover;
     border-radius: 20px 20px 0 0;
     transition: transform 0.3s ease;
-}
-
-#product-card:hover img {
-    transform: scale(1.05);
 }
 
 #info{
