--- a/src/app/pages/search/search.css
+++ b/src/app/pages/search/search.css
@@ -200,10 +200,16 @@ main {
 }
 
 #products-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 30px;
-    margin-bottom: 50px;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+app-product-card{
+    min-width: 270px;
+    max-width: 25%;
 }
 
 .search-card {
@@ -286,8 +292,11 @@ main {
     }
     
     #products-grid {
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        gap: 25px;
+        gap: 10px;
+    }
+    app-product-card{
+        min-width: 200px;
+        max-width: 25%;
     }
 }
 
