--- a/src/app/shared/components/navbar/navbar.css
+++ b/src/app/shared/components/navbar/navbar.css
@@ -26,6 +26,9 @@ img{
     width: 35px;
     height: auto;
 }
+button{
+    padding: 0px 20px;
+}
 fa-icon{
     font-size: 1.75rem;
     color: var(--font2);
